--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
                         <a href="" class="border rounded-circle p-3 fs-6 "><i class='bx bxl-twitter'></i></a>
                     </div> -->
 
-          <!-- <a href="CV/Ujer_Shaikh.pdf" class="btn btn-primary mt-5 ms-3 cv-btn rounded-pill">Download CV</a>                     -->
+          <a href="Resume/Ibrahim Mulla resume.pdf.pdf"
+            class="btn btn-primary mt-5 ms-3 resume-btn rounded-pill">Download CV</a>
         </div>
 
 
@@ -120,8 +121,8 @@
             <h2>I have Completed My Bachelor's in information and Technology</h2>
             <h2>Apart from coding, some other activities that I love to do!</h2>
             <div>
-              <span class="fs-5">Football </span><br>
-              <span class="fs-5 text-">Travelling</span>
+              <span class="fs-5 fw-bold check">Football </span><br>
+              <span class="fs-5 fw-bold check">Travelling</span>
             </div>
           </div>
         </div>
