--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         <a href="" class="border rounded-circle p-3 fs-6 "><i class='bx bxl-twitter'></i></a>
                     </div> -->
 
-          <a href="Resume/Ibrahim Mulla resume.pdf.pdf"
+          <a href="Resume/Ibrahim Mulla's CV.pdf"
             class="btn btn-primary mt-5 ms-3 resume-btn rounded-pill">Download CV</a>
         </div>
 
